# Exodus_delay

./: .gitignore  CMakeLists.txt  Exodus_2.jucer  README.md
.github/workflows/: build.yml
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: ByTempoToggle.cpp  ByTempoToggle.h  Configs.h  CostumeKnob.cpp  CostumeKnob.h  CostumeSliderClass.cpp  CostumeSliderClass.h  DelayEngine.cpp  DelayEngine.h  DelayLine.cpp  DelayLine.h  DistKnob.cpp  DistKnob.h  Distortion.cpp  Distortion.h  MyDistortion.cpp  MyDistortion.h  MyFilter.cpp  MyFilter.h  MyPhaser.cpp  MyPhaser.h  MyReverb.cpp  MyReverb.h  Parameters.h  Phaser.cpp  Phaser.h  PhaserKnob.cpp  PhaserKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Reverb.cpp  TileSlider.cpp  TileSlider.h
